[package]
name = "mach"
version = "0.0.1"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.10"
num_cpus = "1.16.0"
once_cell = "1.19.0"
oxc_resolver = "1.0.1"
pathdiff = "0.2.1"
sha2 = { version = "0.10.8", features = ["asm"] }
swc_core = { version = "0.87.11", features = ["ecma_ast", "ecma_parser", "common", "ecma_visit", "ecma_transforms", "common_concurrent", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "ecma_transforms_optimization", "ecma_minifier"] }
