[package]
name = "mach-nodejs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mach = { path = "../mach" }
ipc-channel = "0.18.0"
napi = { version = "2.12.2", default-features = false, features = ["napi9", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.19.0"

[build-dependencies]
napi-build = "2.0.1"

