[package]
name = "mach"
version = "0.0.0-local"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/mach"
description = "Bundler For The Modern Web"
edition = "2021"
license = "MIT"

# [[bin]]
# name = "mach"
# path = "src/main.rs"

# [lib]
# name = "alshdavid_mach"
# path = "src/lib.rs"

[dependencies]
glob-match = "0.2.1"
normalize-path = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
oxc_resolver = "1.0.1"
pathdiff = "0.2.1"
serde_json = "1.0.110"
serde_yaml = "0.9.30"
sha2 = { version = "0.10.8", features = [] }
clap = { version = "4.4.18", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21.7"
serde = "1.0.196"
snowflake = "1.3.0"
async-trait = "0.1.77"
json_comments = "0.2.2"
thiserror = "1.0.57"
regex = "1.10.3"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"

# -----------------
# Deno Dependencies
# -----------------
deno_core = "0.269.0"

deno_embed = { path = "../vendor/deno_embed" }

# ----------------
# SWC Dependencies
# ----------------
# SWC's version bumping is buggy and Deno also uses SWC resulting in version conflicts.
# To resolve this I vendor SWC as a git submodule. The only changes to SWC are package names
# and package versions. This ensure Mach has a unique copy of SWC free of collisions.
[dependencies.ad_swc_atoms]
path = "../vendor/swc/swc_atoms"

[dependencies.ad_swc_common]
features = ["concurrent"]
path = "../vendor/swc/swc_common"

[dependencies.ad_swc_ecma_ast]
features = ["serde-impl"]
path = "../vendor/swc/swc_ecma_ast"

[dependencies.ad_swc_ecma_codegen]
path = "../vendor/swc/swc_ecma_codegen"

[dependencies.ad_swc_ecma_codegen_macros]
path = "../vendor/swc/swc_ecma_codegen_macros"

[dependencies.ad_swc_ecma_parser]
path = "../vendor/swc/swc_ecma_parser"

[dependencies.ad_swc_ecma_transforms_base]
path = "../vendor/swc/swc_ecma_transforms_base"

[dependencies.ad_swc_ecma_transforms_optimization]
path = "../vendor/swc/swc_ecma_transforms_optimization"

[dependencies.ad_swc_ecma_transforms_react]
path = "../vendor/swc/swc_ecma_transforms_react"

[dependencies.ad_swc_ecma_transforms_typescript]
path = "../vendor/swc/swc_ecma_transforms_typescript"

[dependencies.ad_swc_ecma_visit]
path = "../vendor/swc/swc_ecma_visit"

