[package]
name = "mach"
version = "0.0.0-local"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/mach"
description = "Bundler For The Modern Web"
edition = "2021"
license = "MIT"

# [[bin]]
# name = "mach"
# path = "src/main.rs"

# [lib]
# name = "alshdavid_mach"
# path = "src/lib.rs"

[dependencies]
swc_core = { version = "=0.90.22", features = ["ecma_ast", "ecma_parser", "common", "ecma_visit", "ecma_transforms", "common_concurrent", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "ecma_transforms_optimization", "ecma_minifier"] }
glob-match = "0.2.1"
normalize-path = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
oxc_resolver = "1.0.1"
pathdiff = "0.2.1"
serde_json = "1.0.110"
serde_yaml = "0.9.30"
sha2 = { version = "0.10.8", features = [] }
clap = { version = "4.4.18", features = ["derive", "env"] }
base64 = "0.21.7"
serde = "1.0.196"
snowflake = "1.3.0"
async-trait = "0.1.77"
json_comments = "0.2.2"
thiserror = "1.0.57"
regex = "1.10.3"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
