[package]
name = "mach"
version = "0.0.0-local"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/mach"
description = "Bundler For The Modern Web"
edition = "2021"
license = "MIT"

[[bin]]
name = "mach"
path = "src/main.rs"

[dependencies]
mach_libdeno = { path = "../deno/libdeno" }
swc_core = { version = "=0.90.23", features = ["ecma_ast", "ecma_parser", "common", "ecma_visit", "ecma_transforms", "common_concurrent", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "ecma_transforms_optimization", "ecma_minifier"] }
glob-match = "0.2.1"
normalize-path = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
oxc_resolver = "1.6.2"
pathdiff = "0.2.1"
serde_json = "1.0.114"
sha2 = { version = "0.10.8", features = [] }
clap = { version = "4.5.3", features = ["derive", "env"] }
serde = "1.0.197"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
dashmap = "5.5.3"
snowflake = { version = "1.3.0", features = ["serde", "serde_derive", "serde_support"] }
libloading = "0.8.3"
