[package]
name = "mach_adapter_nodejs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
libmach = { path = "../../libmach" }
serde = "^1.0.196"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.110"
snowflake = "1.3.0"
base64 = "0.21.7"

[profile.release-lto]
inherits = "release"
lto = true
