[package]
name = "mach_adapter_noop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
libmach = { path = "../../crates/libmach" }

# This needs to be copy/pasted from the root Cargo.toml
[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
