[package]
name = "libmach"
version = "0.1.0"
edition = "2021"

[lib]
name = "libmach"

[features]
# hash = ["dep:sha2"]
# serde = ["dep:serde"]

[dependencies]
serde = { version = "^1.0.196", features = ["derive"] }
sha2 = { version = "^0.10.8", features = [] }
serde_json = "^1.0.114"
snowflake = { version = "^1.3.0", features = ["serde_support"] }
