[package]
name = "mach"
version = "0.0.1"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.10"
glob-match = "0.2.1"
kanal = "0.1.0-pre8"
normalize-path = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
oxc_resolver = "1.0.1"
pathdiff = "0.2.1"
serde_json = "1.0.110"
serde_yaml = "0.9.30"
sha2 = { version = "0.10.8", features = [] }
swc_core = { version = "0.87.11", features = ["ecma_ast", "ecma_parser", "common", "ecma_visit", "ecma_transforms", "common_concurrent", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "ecma_transforms_optimization", "ecma_minifier"] }
rust-embed = { version = "8.2.0", features = ["include-exclude"] }
