[package]
name = "mach"
version = "0.0.0"
edition = "2021"

[dependencies]
glob-match = "0.2.1"
normalize-path = "0.2.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
oxc_resolver = "1.0.1"
pathdiff = "0.2.1"
serde_json = "1.0.110"
serde_yaml = "0.9.30"
sha2 = { version = "0.10.8", features = [] }
swc_core = { version = "0.87.11", features = ["ecma_ast", "ecma_parser", "common", "ecma_visit", "ecma_transforms", "common_concurrent", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "ecma_transforms_optimization", "ecma_minifier"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21.7"
serde = "1.0.196"
snowflake = "1.3.0"
async-trait = "0.1.77"
