[package]
name = "mach_bundler_cli"
version = "0.0.0-local"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/mach"
description = "Bundler For The Modern Web"
edition = "2021"
license = "MIT"

[[bin]]
name = "mach"
path = "src/main.rs"

[dependencies]
mach_bundler_core = { path = "../mach_bundler_core" }
clap = { version = "^4.5.3", features = ["derive", "env"] }
normalize-path = "^0.2.1"
num_cpus = "^1.16.0"
serde_json = "^1.0.114"
