[package]
name = "mach_bundler_cli"
version = "0.0.0-local"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/mach"
description = "Bundler For The Modern Web"
edition = "2021"
license = "MIT"

[[bin]]
name = "mach"
path = "src/main.rs"

[dependencies]
mach_bundler_core = { path = "../mach_bundler_core", features = ["cli_parser"]}
