[package]
name = "mach_bundler_core"
version = "0.0.0-local"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/mach"
description = "Bundler For The Modern Web"
edition = "2021"
license = "MIT"

[dependencies]
swc_core = { version = "=0.90.23", features = ["ecma_ast", "ecma_parser", "common", "ecma_visit", "ecma_transforms", "common_concurrent", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "ecma_transforms_optimization", "ecma_minifier"] }
glob-match = "^0.2.1"
normalize-path = "^0.2.1"
once_cell = "^1.19.0"
oxc_resolver = "1.7.0"
pathdiff = "^0.2.1"
serde_json = "^1.0.114"
sha2 = { version = "^0.10.8", features = [] }
serde = "^1.0.197"
html5ever = "^0.26.0"
markup5ever_rcdom = "^0.2.0"
ipc_channel_adapter = { version = "^0.1.2"}
