[package]
name = "mach_bundler_core"
version = "0.0.0-local"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/mach"
description = "Bundler For The Modern Web"
edition = "2021"
license = "MIT"

[features]
cli_parser = ["clap"]

[dependencies]
swc_core = { version = "=0.90.23", features = ["ecma_ast", "ecma_parser", "common", "ecma_visit", "ecma_transforms", "common_concurrent", "ecma_codegen", "ecma_transforms_typescript", "ecma_transforms_react", "ecma_transforms_optimization", "ecma_minifier"] }
glob-match = "0.*"
normalize-path = "0.*"
once_cell = "1.*"
oxc_resolver = "1.*"
pathdiff = "0.*"
serde_json = "1.*"
sha2 = { version = "0.*", features = [] }
serde = "1.*"
html5ever = "0.*"
markup5ever_rcdom = "0.*"
clap = { version = "4.*", features = ["derive", "env"], optional = true }
num_cpus = "1.*"
