[package]
name = "mach_nodejs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mach = { path = "../mach" }
napi = { version = "2.12.2", default-features = false, features = ["napi8", "tokio_rt", "serde-json", "async"] }
napi-derive = "2.12.2"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["full"] }
ipc_channel_adapter = { version = "^0.1.2"}

[build-dependencies]
napi-build = "2.0.1"

