# TODO strip this of unneeded dependencies and make it easier to update

[package]
name = "mach_adapter_deno"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
mach_libdeno = { path = "../libdeno" }
oxc_resolver = "^1.6.2"
normalize-path = "^0.2.1"

tokio = { version = "1.36.0", features = ["full", "sync"] }
async-trait = "0.1.77"
serde = "1.0.197"
thiserror = "1.0.40"
indexmap = { version = "2", features = ["serde"] }
percent-encoding = "2.3.0"
base32 = "=0.4.0"
cache_control = "=0.2.0"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }

deno_ast = { version = "0.34.2", features = ["cjs"] }
deno_broadcast_channel = "0.135.0"
deno_cache = "0.73.0"
deno_canvas = "0.10.0"
deno_console = "0.141.0"
deno_core = "0.269.0"
deno_cron = "0.21.0"
deno_cache_dir = "0.7.1"
deno_crypto = "0.155.0"
deno_fetch = "0.165.0"
deno_ffi = "0.128.0"
deno_fs = "0.51.0"
deno_http = "0.138.0"
deno_io = "0.51.0"
deno_kv = "0.49.0"
deno_napi = "0.71.0"
deno_net = "0.133.0"
deno_node = "0.78.0"
deno_runtime = "0.149.0"
deno_tls = "0.128.0"
deno_lockfile = "0.19.0"
deno_terminal = "0.1.1"
deno_url = "0.141.0"
deno_task_shell = "=0.14.3"
deno_web = "0.172.0"
deno_webgpu = "0.108.0"
deno_emit = "=0.38.2"
deno_webidl = "0.141.0"
deno_websocket = "0.146.0"
deno_doc = { version = "=0.113.1", features = ["html"] }
deno_webstorage = "0.136.0"
deno_graph = "0.69.6"
deno_semver = "0.5.4"
deno_lint = { version = "=0.57.1", features = ["docs"] }
deno_npm = "0.17.0"
deno_config = "0.14.1"
import_map = "0.19.0"
log = { version = "0.4.20", features = ["serde"] }
dashmap = "5.5.3"

dissimilar = "=1.0.4"
walkdir = "=2.3.2"
ignore = "0.4"
env_logger = "=0.10.0"

bincode = "=1.3.3"
typed-arena = "=2.0.1"
text_lines = "=0.6.0"
rand = { version = "=0.8.5", features = ["small_rng"] }

aes = "=0.8.3"
anyhow = "1.0.57"
base64 = "0.21.4"
bencher = "0.1"
brotli = "3.3.4"
bytes = "1.4.0"
cbc = { version = "=0.1.2", features = ["alloc"] }
# Note: Do not use the "clock" feature of chrono, as it links us to CoreFoundation on macOS.
#       Instead use util::time::utc_now()
console_static_text = "=0.8.1"
data-encoding = "2.3.3"
data-url = "=0.3.0"
dlopen2 = "0.6.1"
ecb = "=0.1.2"
elliptic-curve = { version = "0.13.4", features = ["alloc", "arithmetic", "ecdh", "std", "pem"] }
encoding_rs = "=0.8.33"
faster-hex = "0.9"
fastwebsockets = { version = "0.6", features = ["upgrade", "unstable-split"] }
filetime = "0.2.16"
flate2 = { version = "1.0.26", default-features = false }
fs3 = "0.5.0"
futures = "0.3.21"
glob = "0.3.1"
h2 = "0.4"
http = "1.0"
http-body-util = "0.1"
http_v02 = { package = "http", version = "0.2.9" }
httparse = "1.8.0"
hyper = { version = "=1.1.0", features = ["full"] }
hyper-util = { version = "=0.1.2", features = ["tokio", "server", "server-auto"] }
hyper_v014 = { package = "hyper", version = "0.14.26", features = ["runtime", "http1"] }
lazy-regex = "3"
libc = "0.2.126"
libz-sys = { version = "1.1", default-features = false }
lsp-types = "=0.94.1" # used by tower-lsp and "proposed" feature is unstable in patch releases
memmem = "0.1.1"
monch = "=0.5.0"
notify = "=5.0.0"
num-bigint = { version = "0.4", features = ["rand"] }
once_cell = "1.17.1"
os_pipe = { version = "=1.1.5", features = ["io_safety"] }
p224 = { version = "0.13.0", features = ["ecdh"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
p384 = { version = "0.13.0", features = ["ecdh"] }
parking_lot = "0.12.0"
phf = { version = "0.11", features = ["macros"] }
pin-project = "1.0.11" # don't pin because they yank crates from cargo
pretty_assertions = "=1.4.0"
prost = "0.11"
prost-build = "0.11"
regex = "^1.7.0"
reqwest = { version = "=0.11.20", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json"] } # pinned because of https://github.com/seanmonstar/reqwest/pull/1955
ring = "^0.17.0"
rusqlite = { version = "=0.29.0", features = ["unlock_notify", "bundled"] }
rustls = "0.21.8"
rustls-pemfile = "1.0.0"
rustls-tokio-stream = "=0.2.17"
rustls-webpki = "0.101.4"
rustyline = "=13.0.0"
saffron = "=0.1.0"
scopeguard = "1.2.0"
serde_bytes = "0.11"
serde_json = "1.0.85"
serde_repr = "=0.1.16"
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.1"
slab = "0.4"
smallvec = "1.8"
socket2 = { version = "0.5.3", features = ["all"] }
tar = "=0.4.40"
tempfile = "3.4.0"
termcolor = "1.1.3"
tokio-metrics = { version = "0.3.0", features = ["rt"] }
tokio-util = "0.7.4"
tower-lsp = { version = "=0.20.0", features = ["proposed"] }
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
uuid = { version = "1.3.0", features = ["v4"] }
webpki-roots = "0.25.2"
zstd = "=0.12.4"

# crypto
hkdf = "0.12.3"
rsa = { version = "0.9.3", default-features = false, features = ["std", "pem", "hazmat"] } # hazmat needed for PrehashSigner in ext/node

# webgpu
raw-window-handle = "0.5.0"
wgpu-core = { version = "=0.18", features = ["raw-window-handle"] }
wgpu-hal = "=0.18"
wgpu-types = "=0.18"

# macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# unix
nix = "=0.26.2"

# windows deps
fwdansi = "=1.1.0"
winapi = "=0.3.9"
windows-sys = { version = "0.48.0", features = ["Win32_Media"] }
winres = "=0.1.12"

shell-escape = "=0.1.5"
eszip = "=0.64.2"

clap = { version = "^4.4.17", features = ["env", "string"] }
clap_complete = "=4.4.7"
clap_complete_fig = "=4.4.2"
color-print = "0.3.5"
dotenvy = "0.15.7"
dprint-plugin-json = "=0.19.2"
dprint-plugin-jupyter = "=0.1.3"
dprint-plugin-markdown = "=0.16.4"
dprint-plugin-typescript = "=0.89.3"
fancy-regex = "=0.10.0"
jsonc-parser = { version = "=0.23.0", features = ["serde"] }
open = "5.0.1"
quick-junit = "^0.3.5"
rustyline-derive = "=0.7.0"
spki = { version = "0.7", features = ["pem"] }
text-size = "=1.1.0"
twox-hash = "=1.6.3"
unicode-width = "0.1"
zeromq = { version = "=0.3.4", default-features = false, features = ["tcp-transport", "tokio-runtime"] }
snowflake = "1.3.0"

# This needs to be copy/pasted from the root Cargo.toml
[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
