[package]
name = "mach_bundler_npm_os_arch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mach_bundler_core = { path = "../../crates/mach_bundler_core" }
napi = { version = "2.*", default-features = false, features = ["napi8", "tokio_rt", "serde-json", "async"] }
napi-derive = "2.*"
serde = { version = "1.*", features = ["derive"] }
once_cell = "1.*"
tokio = { version = "1.*", features = ["full"] }
ipc_channel_adapter = { version = "0.*"}

[build-dependencies]
napi-build = "2.*"
